--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,6 +3,7 @@
 
 @import "custom/colors";
 @import "custom/fonts";
+@import "custom/solarized";
 @import "custom/layout";
 @import "base";
 @import "partials";
