--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,5 @@
 <section>
   <h1>About Me</h1>
   <p>A little something about me.</p>
+  Working for <a href='https://coderwall.com/team/betterplace'>betterplace</a>
 </section>
