--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -16,26 +16,26 @@
 
 
 /* To use the light Solarized highlighting theme uncomment the following line */
-//$solarized: light;
+$solarized: light;
 
 /* If you want to tweak the Solarized colors you can do that here */
 //$base03:          #002b36; //darkest blue
 //$base02:          #073642; //dark blue
-//$base01:          #586e75; //darkest gray
-//$base00:          #657b83; //dark gray
-//$base0:           #839496; //medium gray
-//$base1:           #93a1a1; //medium light gray
-//$base2:           #eee8d5; //cream
-//$base3:           #fdf6e3; //white
-//$solar-yellow:    #b58900;
-//$solar-orange:    #cb4b16;
+//$base00:          #fffffb; //dark gray          -
+//$base0:           #839496; //medium gray      - ?
 //$solar-red:       #dc322f;
-//$solar-magenta:   #d33682;
-//$solar-violet:    #6c71c4;
-//$solar-blue:      #268bd2;
-//$solar-cyan:      #2aa198;
-//$solar-green:     #859900;
+//$solar-violet:    #6c71c4; // - ?
 
+$base01:          #fffffb; // Brackets, dots, parameters
+$base1:           #fffffb; // Line numbers
+$base2:           #b6b6b6; // Border color
+$base3:           #323232; // Background
+$solar-blue:      #ffc66d; // Method definition and calls
+$solar-cyan:      #9aaf56; // Strings
+$solar-green:     #fffffb; // Global method calls (e.g. require, puts)
+$solar-magenta:   #fffffb; // Class definition
+$solar-orange:    #cc7732; // Keywords
+$solar-yellow:    #fffffb; // Module definition
 
 /* Non highlighted code colors */
 //$pre-bg: $base03;
